--- a/archives/toutiao-search/2024-04-17.md
+++ b/archives/toutiao-search/2024-04-17.md
@@ -1,59 +1,73 @@
 # 2024-04-17
 
-共 296 条
+共 310 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Apr 17 2024 18:00:55 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Apr 17 2024 19:00:35 GMT+0800 (China Standard Time) -->
 1. [投资近2亿大桥围栏大片倒塌](https://so.toutiao.com/search?keyword=投资近2亿大桥围栏大片倒塌)
-1. [换表新增1.7万欠费？燃气公司回应](https://so.toutiao.com/search?keyword=换表新增1.7万欠费？燃气公司回应)
+1. [阿曼连续3天遭遇强降雨已致19死](https://so.toutiao.com/search?keyword=阿曼连续3天遭遇强降雨已致19死)
 1. [一季度中国经济增长缘何“超预期”](https://so.toutiao.com/search?keyword=一季度中国经济增长缘何“超预期”)
+1. [换表新增1.7万欠费？燃气公司回应](https://so.toutiao.com/search?keyword=换表新增1.7万欠费？燃气公司回应)
+1. [两千万人围观了AI刘强东](https://so.toutiao.com/search?keyword=两千万人围观了AI刘强东)
 1. [A股大涨 逾千股涨超9%](https://so.toutiao.com/search?keyword=A股大涨+逾千股涨超9%)
-1. [追梦：相信管理层会考虑续约克莱](https://so.toutiao.com/search?keyword=追梦：相信管理层会考虑续约克莱)
+1. [调查组进驻重庆燃气集团倒查三年账](https://so.toutiao.com/search?keyword=调查组进驻重庆燃气集团倒查三年账)
+1. [泽连斯基：中国可以加速和平进程](https://so.toutiao.com/search?keyword=泽连斯基：中国可以加速和平进程)
+1. [“提灯定损”村庄的违建会全拆吗](https://so.toutiao.com/search?keyword=“提灯定损”村庄的违建会全拆吗)
 1. [知名茶企老板一家三口遇害](https://so.toutiao.com/search?keyword=知名茶企老板一家三口遇害)
-1. [王婆：彩礼是对姑娘的肯定一定得要](https://so.toutiao.com/search?keyword=王婆：彩礼是对姑娘的肯定一定得要)
-1. [胡锡进主张将五一实际假日恢复到3天](https://so.toutiao.com/search?keyword=胡锡进主张将五一实际假日恢复到3天)
-1. [媒体人：鹈鹕主帅做了勇敢的决定](https://so.toutiao.com/search?keyword=媒体人：鹈鹕主帅做了勇敢的决定)
-1. [曝女子在养生馆被丈夫从床上拽下打](https://so.toutiao.com/search?keyword=曝女子在养生馆被丈夫从床上拽下打)
 1. [巴西女子推老人尸体进银行取贷款](https://so.toutiao.com/search?keyword=巴西女子推老人尸体进银行取贷款)
 1. [兵马俑坑挖2小时挣6000？官方辟谣](https://so.toutiao.com/search?keyword=兵马俑坑挖2小时挣6000？官方辟谣)
-1. [3岁男童发育迟缓被生父杀害](https://so.toutiao.com/search?keyword=3岁男童发育迟缓被生父杀害)
-1. [三只羊网络入局短剧赛道](https://so.toutiao.com/search?keyword=三只羊网络入局短剧赛道)
-1. [女孩退伍224天后收到部队转账](https://so.toutiao.com/search?keyword=女孩退伍224天后收到部队转账)
+1. [王婆：彩礼是对姑娘的肯定一定得要](https://so.toutiao.com/search?keyword=王婆：彩礼是对姑娘的肯定一定得要)
+1. [湖人季中赛时只有12%概率进季后赛](https://so.toutiao.com/search?keyword=湖人季中赛时只有12%概率进季后赛)
+1. [东部战区发言人现新面孔 出自海军](https://so.toutiao.com/search?keyword=东部战区发言人现新面孔+出自海军)
+1. [评论员谈成都房子1年没住收燃气费](https://so.toutiao.com/search?keyword=评论员谈成都房子1年没住收燃气费)
 1. [哈尔滨高楼发生爆燃 大量碎片坠落](https://so.toutiao.com/search?keyword=哈尔滨高楼发生爆燃+大量碎片坠落)
-1. [“提灯定损”村庄的违建会全拆吗](https://so.toutiao.com/search?keyword=“提灯定损”村庄的违建会全拆吗)
-1. [美媒：以色列准备多款战机打击伊朗](https://so.toutiao.com/search?keyword=美媒：以色列准备多款战机打击伊朗)
-1. [调查组进驻重庆燃气集团倒查三年账](https://so.toutiao.com/search?keyword=调查组进驻重庆燃气集团倒查三年账)
-1. [开封王婆“出战”江西冒雨说媒](https://so.toutiao.com/search?keyword=开封王婆“出战”江西冒雨说媒)
-1. [我国不包括调休的公共假期是11天](https://so.toutiao.com/search?keyword=我国不包括调休的公共假期是11天)
-1. [阿曼连续3天遭遇强降雨已致19死](https://so.toutiao.com/search?keyword=阿曼连续3天遭遇强降雨已致19死)
+1. [俄称乌在俄的恐怖破坏活动愈发活跃](https://so.toutiao.com/search?keyword=俄称乌在俄的恐怖破坏活动愈发活跃)
 1. [特斯拉万人大裁员轰动美国](https://so.toutiao.com/search?keyword=特斯拉万人大裁员轰动美国)
+1. [女孩退伍224天后收到部队转账](https://so.toutiao.com/search?keyword=女孩退伍224天后收到部队转账)
+1. [我国不包括调休的公共假期是11天](https://so.toutiao.com/search?keyword=我国不包括调休的公共假期是11天)
+1. [儿童牛奶里发现异物](https://so.toutiao.com/search?keyword=儿童牛奶里发现异物)
+1. [美媒：以色列准备多款战机打击伊朗](https://so.toutiao.com/search?keyword=美媒：以色列准备多款战机打击伊朗)
+1. [江西暴雨淹没路面 司机下车捞鱼](https://so.toutiao.com/search?keyword=江西暴雨淹没路面+司机下车捞鱼)
+1. [36岁女子存300万后提前退休](https://so.toutiao.com/search?keyword=36岁女子存300万后提前退休)
+1. [周迅《如懿传》再引争议](https://so.toutiao.com/search?keyword=周迅《如懿传》再引争议)
+1. [直击消防员扑救山火现场](https://so.toutiao.com/search?keyword=直击消防员扑救山火现场)
 1. [农民工白天打工晚上去直播间当大哥](https://so.toutiao.com/search?keyword=农民工白天打工晚上去直播间当大哥)
-1. [美反潜巡逻机过航台海 东部战区回应](https://so.toutiao.com/search?keyword=美反潜巡逻机过航台海+东部战区回应)
+1. [曝女子在养生馆被丈夫从床上拽下打](https://so.toutiao.com/search?keyword=曝女子在养生馆被丈夫从床上拽下打)
+1. [媒体人：鹈鹕主帅做了勇敢的决定](https://so.toutiao.com/search?keyword=媒体人：鹈鹕主帅做了勇敢的决定)
 1. [招牌统一的城市营商环境不好？](https://so.toutiao.com/search?keyword=招牌统一的城市营商环境不好？)
+1. [王楚钦：昨天是最难熬的一天](https://so.toutiao.com/search?keyword=王楚钦：昨天是最难熬的一天)
+1. [三只羊网络入局短剧赛道](https://so.toutiao.com/search?keyword=三只羊网络入局短剧赛道)
+1. [美欧称乌克兰与以色列“不能比”](https://so.toutiao.com/search?keyword=美欧称乌克兰与以色列“不能比”)
+1. [外媒评德总理朔尔茨访华](https://so.toutiao.com/search?keyword=外媒评德总理朔尔茨访华)
+1. [主播回应撞脸命案逃犯：已报警](https://so.toutiao.com/search?keyword=主播回应撞脸命案逃犯：已报警)
 1. [华为Pura70系列出货量或增长约230%](https://so.toutiao.com/search?keyword=华为Pura70系列出货量或增长约230%)
+1. [中国两批援助加沙物资将运抵埃及](https://so.toutiao.com/search?keyword=中国两批援助加沙物资将运抵埃及)
+1. [若美军多枚反舰导弹齐射 如何防御](https://so.toutiao.com/search?keyword=若美军多枚反舰导弹齐射+如何防御)
+1. [开封王婆“出战”江西冒雨说媒](https://so.toutiao.com/search?keyword=开封王婆“出战”江西冒雨说媒)
+1. [中美防长通话 双方新闻稿有何差异](https://so.toutiao.com/search?keyword=中美防长通话+双方新闻稿有何差异)
+1. [极越回应员工买小米SU7被辞退](https://so.toutiao.com/search?keyword=极越回应员工买小米SU7被辞退)
+1. [美反潜巡逻机过航台海 东部战区回应](https://so.toutiao.com/search?keyword=美反潜巡逻机过航台海+东部战区回应)
+1. [浙江一居民楼被雷击中 无人员伤亡](https://so.toutiao.com/search?keyword=浙江一居民楼被雷击中+无人员伤亡)
+1. [江西上栗狂风吹倒大树砸中多栋民房](https://so.toutiao.com/search?keyword=江西上栗狂风吹倒大树砸中多栋民房)
+1. [川渝燃气公司利润大涨股价连跌](https://so.toutiao.com/search?keyword=川渝燃气公司利润大涨股价连跌)
+1. [广东多地遇强对流天气 强降雨频繁](https://so.toutiao.com/search?keyword=广东多地遇强对流天气+强降雨频繁)
+1. [永雄集团将不再从事具体催收业务](https://so.toutiao.com/search?keyword=永雄集团将不再从事具体催收业务)
+1. [江西一种植户30多个大棚因大风全毁](https://so.toutiao.com/search?keyword=江西一种植户30多个大棚因大风全毁)
+1. [广州将迎强降雨 致灾风险高](https://so.toutiao.com/search?keyword=广州将迎强降雨+致灾风险高)
+1. [追梦：相信管理层会考虑续约克莱](https://so.toutiao.com/search?keyword=追梦：相信管理层会考虑续约克莱)
+1. [胡锡进主张将五一实际假日恢复到3天](https://so.toutiao.com/search?keyword=胡锡进主张将五一实际假日恢复到3天)
+1. [3岁男童发育迟缓被生父杀害](https://so.toutiao.com/search?keyword=3岁男童发育迟缓被生父杀害)
 1. [沙利文宣布将对伊朗实施新制裁](https://so.toutiao.com/search?keyword=沙利文宣布将对伊朗实施新制裁)
 1. [德国汽车业希望避免与中国决裂](https://so.toutiao.com/search?keyword=德国汽车业希望避免与中国决裂)
-1. [泽连斯基：中国可以加速和平进程](https://so.toutiao.com/search?keyword=泽连斯基：中国可以加速和平进程)
-1. [主播回应撞脸命案逃犯：已报警](https://so.toutiao.com/search?keyword=主播回应撞脸命案逃犯：已报警)
-1. [王楚钦：昨天是最难熬的一天](https://so.toutiao.com/search?keyword=王楚钦：昨天是最难熬的一天)
-1. [儿童牛奶里发现异物](https://so.toutiao.com/search?keyword=儿童牛奶里发现异物)
 1. [重庆燃气第四季度营业利润暴增11倍](https://so.toutiao.com/search?keyword=重庆燃气第四季度营业利润暴增11倍)
-1. [东部战区发言人现新面孔 出自海军](https://so.toutiao.com/search?keyword=东部战区发言人现新面孔+出自海军)
-1. [两千万人围观了AI刘强东](https://so.toutiao.com/search?keyword=两千万人围观了AI刘强东)
-1. [评论员谈成都房子1年没住收燃气费](https://so.toutiao.com/search?keyword=评论员谈成都房子1年没住收燃气费)
 1. [女子躺座椅上拒不下飞机致航班延误](https://so.toutiao.com/search?keyword=女子躺座椅上拒不下飞机致航班延误)
 1. [欧盟高官解释为何不同样保护乌克兰](https://so.toutiao.com/search?keyword=欧盟高官解释为何不同样保护乌克兰)
-1. [川渝燃气公司利润大涨股价连跌](https://so.toutiao.com/search?keyword=川渝燃气公司利润大涨股价连跌)
-1. [极越回应员工买小米SU7被辞退](https://so.toutiao.com/search?keyword=极越回应员工买小米SU7被辞退)
 1. [美元指数破106关口后亚太市场承压](https://so.toutiao.com/search?keyword=美元指数破106关口后亚太市场承压)
-1. [若美军多枚反舰导弹齐射 如何防御](https://so.toutiao.com/search?keyword=若美军多枚反舰导弹齐射+如何防御)
 1. [伊朗袭击期间以空军控制室画面公开](https://so.toutiao.com/search?keyword=伊朗袭击期间以空军控制室画面公开)
 1. [官方回应石家庄一小区上百居民腹泻](https://so.toutiao.com/search?keyword=官方回应石家庄一小区上百居民腹泻)
-1. [江西暴雨淹没路面 司机下车捞鱼](https://so.toutiao.com/search?keyword=江西暴雨淹没路面+司机下车捞鱼)
 1. [新疆科研人员培育出矮化壮苗黄瓜](https://so.toutiao.com/search?keyword=新疆科研人员培育出矮化壮苗黄瓜)
 1. [普京与伊朗总统通电话讨论中东局势](https://so.toutiao.com/search?keyword=普京与伊朗总统通电话讨论中东局势)
 1. [美国务院：布林肯访华想聊中俄关系](https://so.toutiao.com/search?keyword=美国务院：布林肯访华想聊中俄关系)
-1. [中美防长通话 双方新闻稿有何差异](https://so.toutiao.com/search?keyword=中美防长通话+双方新闻稿有何差异)
 1. [成都一业主换燃气表20天欠费1万7](https://so.toutiao.com/search?keyword=成都一业主换燃气表20天欠费1万7)
 1. [惠誉下调腾讯和阿里巴巴评级至负面](https://so.toutiao.com/search?keyword=惠誉下调腾讯和阿里巴巴评级至负面)
 1. [德媒引用《孙子兵法》谈朔尔茨访华](https://so.toutiao.com/search?keyword=德媒引用《孙子兵法》谈朔尔茨访华)
