--- a/archives/toutiao-search/2024-04-17.md
+++ b/archives/toutiao-search/2024-04-17.md
@@ -1,59 +1,75 @@
 # 2024-04-17
 
-共 325 条
+共 339 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Apr 17 2024 20:09:46 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Apr 17 2024 21:02:28 GMT+0800 (China Standard Time) -->
+1. [阿联酋一天下了一年的雨](https://so.toutiao.com/search?keyword=阿联酋一天下了一年的雨)
 1. [投资近2亿大桥围栏大片倒塌](https://so.toutiao.com/search?keyword=投资近2亿大桥围栏大片倒塌)
-1. [茶企老板一家3口遇害 嫌犯系其弟弟](https://so.toutiao.com/search?keyword=茶企老板一家3口遇害+嫌犯系其弟弟)
-1. [一季度中国经济增长缘何“超预期”](https://so.toutiao.com/search?keyword=一季度中国经济增长缘何“超预期”)
-1. [换表新增1.7万欠费？燃气公司回应](https://so.toutiao.com/search?keyword=换表新增1.7万欠费？燃气公司回应)
-1. [A股大涨 逾千股涨超9%](https://so.toutiao.com/search?keyword=A股大涨+逾千股涨超9%)
-1. [驻迪拜总领馆提醒公民关注天气变化](https://so.toutiao.com/search?keyword=驻迪拜总领馆提醒公民关注天气变化)
+1. [从三个账本看春耕春管新变化](https://so.toutiao.com/search?keyword=从三个账本看春耕春管新变化)
 1. [两千万人围观了AI刘强东](https://so.toutiao.com/search?keyword=两千万人围观了AI刘强东)
-1. [耶伦：美国将对伊朗实施新制裁](https://so.toutiao.com/search?keyword=耶伦：美国将对伊朗实施新制裁)
-1. [央媒评女子躺座椅致航班延误](https://so.toutiao.com/search?keyword=央媒评女子躺座椅致航班延误)
+1. [裁员赔偿N+3 马斯克被赞有良心](https://so.toutiao.com/search?keyword=裁员赔偿N+3+马斯克被赞有良心)
+1. [茶企老板一家3口遇害 嫌犯系其弟弟](https://so.toutiao.com/search?keyword=茶企老板一家3口遇害+嫌犯系其弟弟)
+1. [小米SU7单周销量登顶](https://so.toutiao.com/search?keyword=小米SU7单周销量登顶)
+1. [美欧将对伊朗实施新制裁](https://so.toutiao.com/search?keyword=美欧将对伊朗实施新制裁)
+1. [女子怀孕36周每次起床都“变形”](https://so.toutiao.com/search?keyword=女子怀孕36周每次起床都“变形”)
 1. [泽连斯基：中国可以加速和平进程](https://so.toutiao.com/search?keyword=泽连斯基：中国可以加速和平进程)
 1. [小浪底观景台9.9元优惠门票不实](https://so.toutiao.com/search?keyword=小浪底观景台9.9元优惠门票不实)
-1. [马斯克N+3赔偿员工被称“良心老板”](https://so.toutiao.com/search?keyword=马斯克N+3赔偿员工被称“良心老板”)
-1. [36岁女子存300万后提前退休](https://so.toutiao.com/search?keyword=36岁女子存300万后提前退休)
-1. [巴西女子推老人尸体进银行取贷款](https://so.toutiao.com/search?keyword=巴西女子推老人尸体进银行取贷款)
-1. [阿联酋一天下了一年的雨](https://so.toutiao.com/search?keyword=阿联酋一天下了一年的雨)
-1. [女孩退伍224天后收到部队转账](https://so.toutiao.com/search?keyword=女孩退伍224天后收到部队转账)
-1. [周迅《如懿传》再引争议](https://so.toutiao.com/search?keyword=周迅《如懿传》再引争议)
-1. [官方回应老人遭雷击身亡](https://so.toutiao.com/search?keyword=官方回应老人遭雷击身亡)
-1. [特斯拉万人大裁员轰动美国](https://so.toutiao.com/search?keyword=特斯拉万人大裁员轰动美国)
-1. [小米SU7单周销量登顶](https://so.toutiao.com/search?keyword=小米SU7单周销量登顶)
+1. [驻迪拜总领馆提醒公民关注天气变化](https://so.toutiao.com/search?keyword=驻迪拜总领馆提醒公民关注天气变化)
+1. [江西暴雨淹没路面 司机下车捞鱼](https://so.toutiao.com/search?keyword=江西暴雨淹没路面+司机下车捞鱼)
 1. [“鸿茅药酒事件”当事人卖书求生](https://so.toutiao.com/search?keyword=“鸿茅药酒事件”当事人卖书求生)
-1. [“提灯定损”村庄的违建会全拆吗](https://so.toutiao.com/search?keyword=“提灯定损”村庄的违建会全拆吗)
-1. [调查组进驻重庆燃气集团倒查三年账](https://so.toutiao.com/search?keyword=调查组进驻重庆燃气集团倒查三年账)
-1. [哈尔滨高楼发生爆燃 大量碎片坠落](https://so.toutiao.com/search?keyword=哈尔滨高楼发生爆燃+大量碎片坠落)
-1. [美媒：以色列准备多款战机打击伊朗](https://so.toutiao.com/search?keyword=美媒：以色列准备多款战机打击伊朗)
-1. [儿童牛奶里发现异物](https://so.toutiao.com/search?keyword=儿童牛奶里发现异物)
-1. [评论员谈成都房子1年没住收燃气费](https://so.toutiao.com/search?keyword=评论员谈成都房子1年没住收燃气费)
-1. [外媒评德总理朔尔茨访华](https://so.toutiao.com/search?keyword=外媒评德总理朔尔茨访华)
-1. [湖北省公安厅原副厅长干永平被查](https://so.toutiao.com/search?keyword=湖北省公安厅原副厅长干永平被查)
-1. [发改委谈超长期国债的部署支持领域](https://so.toutiao.com/search?keyword=发改委谈超长期国债的部署支持领域)
-1. [东部战区发言人现新面孔 出自海军](https://so.toutiao.com/search?keyword=东部战区发言人现新面孔+出自海军)
-1. [川渝燃气公司利润大涨股价连跌](https://so.toutiao.com/search?keyword=川渝燃气公司利润大涨股价连跌)
-1. [长城给大力仑造了一台大力仑炮](https://so.toutiao.com/search?keyword=长城给大力仑造了一台大力仑炮)
-1. [曝女子在养生馆被丈夫从床上拽下打](https://so.toutiao.com/search?keyword=曝女子在养生馆被丈夫从床上拽下打)
-1. [王楚钦：昨天是最难熬的一天](https://so.toutiao.com/search?keyword=王楚钦：昨天是最难熬的一天)
+1. [沈富雄分析赖清德第三波人事布局](https://so.toutiao.com/search?keyword=沈富雄分析赖清德第三波人事布局)
+1. [A股大涨 逾千股涨超9%](https://so.toutiao.com/search?keyword=A股大涨+逾千股涨超9%)
+1. [换表新增1.7万欠费？燃气公司回应](https://so.toutiao.com/search?keyword=换表新增1.7万欠费？燃气公司回应)
+1. [36岁女子存300万后提前退休](https://so.toutiao.com/search?keyword=36岁女子存300万后提前退休)
+1. [伊朗报复以色列：加沙人成唯一输家](https://so.toutiao.com/search?keyword=伊朗报复以色列：加沙人成唯一输家)
 1. [美国抗议者焚烧美国国旗](https://so.toutiao.com/search?keyword=美国抗议者焚烧美国国旗)
+1. [周迅《如懿传》再引争议](https://so.toutiao.com/search?keyword=周迅《如懿传》再引争议)
+1. [湖北省公安厅原副厅长干永平被查](https://so.toutiao.com/search?keyword=湖北省公安厅原副厅长干永平被查)
+1. [央媒评女子躺座椅致航班延误](https://so.toutiao.com/search?keyword=央媒评女子躺座椅致航班延误)
+1. [巴西女子推老人尸体进银行取贷款](https://so.toutiao.com/search?keyword=巴西女子推老人尸体进银行取贷款)
+1. [特斯拉万人大裁员轰动美国](https://so.toutiao.com/search?keyword=特斯拉万人大裁员轰动美国)
+1. [知名编剧称外出2个月烧500多方燃气](https://so.toutiao.com/search?keyword=知名编剧称外出2个月烧500多方燃气)
+1. [农民工白天打工晚上去直播间当大哥](https://so.toutiao.com/search?keyword=农民工白天打工晚上去直播间当大哥)
+1. [长城给大力仑造了一台大力仑炮](https://so.toutiao.com/search?keyword=长城给大力仑造了一台大力仑炮)
+1. [俄军无人机撞向乌军无人机画面曝光](https://so.toutiao.com/search?keyword=俄军无人机撞向乌军无人机画面曝光)
+1. [女孩退伍224天后收到部队转账](https://so.toutiao.com/search?keyword=女孩退伍224天后收到部队转账)
+1. [“提灯定损”村庄的违建会全拆吗](https://so.toutiao.com/search?keyword=“提灯定损”村庄的违建会全拆吗)
+1. [淄博赵大爷徒弟烤肉8天瘦8斤](https://so.toutiao.com/search?keyword=淄博赵大爷徒弟烤肉8天瘦8斤)
+1. [华为Pura70系列出货量或增长约230%](https://so.toutiao.com/search?keyword=华为Pura70系列出货量或增长约230%)
+1. [东部战区发言人现新面孔 出自海军](https://so.toutiao.com/search?keyword=东部战区发言人现新面孔+出自海军)
+1. [刘强东数字人直播释放什么信号](https://so.toutiao.com/search?keyword=刘强东数字人直播释放什么信号)
+1. [评论员谈成都房子1年没住收燃气费](https://so.toutiao.com/search?keyword=评论员谈成都房子1年没住收燃气费)
+1. [王婆江西说媒 牵手嘉宾合唱知心爱人](https://so.toutiao.com/search?keyword=王婆江西说媒+牵手嘉宾合唱知心爱人)
+1. [哈尔滨高楼发生爆燃 大量碎片坠落](https://so.toutiao.com/search?keyword=哈尔滨高楼发生爆燃+大量碎片坠落)
+1. [调查组进驻重庆燃气集团倒查三年账](https://so.toutiao.com/search?keyword=调查组进驻重庆燃气集团倒查三年账)
+1. [园方回应孩子拔笋一根被罚100元](https://so.toutiao.com/search?keyword=园方回应孩子拔笋一根被罚100元)
+1. [曝女子在养生馆被丈夫从床上拽下打](https://so.toutiao.com/search?keyword=曝女子在养生馆被丈夫从床上拽下打)
+1. [燃气公司称换表后费用上涨或是错觉](https://so.toutiao.com/search?keyword=燃气公司称换表后费用上涨或是错觉)
+1. [儿童牛奶里发现异物](https://so.toutiao.com/search?keyword=儿童牛奶里发现异物)
+1. [于东来称员工最低收入到手近8000元](https://so.toutiao.com/search?keyword=于东来称员工最低收入到手近8000元)
+1. [乒乓球澳门世界杯：蒯曼战平田志希](https://so.toutiao.com/search?keyword=乒乓球澳门世界杯：蒯曼战平田志希)
+1. [中美防长通话 双方新闻稿有何差异](https://so.toutiao.com/search?keyword=中美防长通话+双方新闻稿有何差异)
+1. [俄军T72坦克炮击乌军阵地视频曝光](https://so.toutiao.com/search?keyword=俄军T72坦克炮击乌军阵地视频曝光)
+1. [媒体人：鹈鹕主帅做了勇敢的决定](https://so.toutiao.com/search?keyword=媒体人：鹈鹕主帅做了勇敢的决定)
+1. [外媒曝俄乌2022年谈判破裂原因](https://so.toutiao.com/search?keyword=外媒曝俄乌2022年谈判破裂原因)
+1. [湖北一高校大厅惊现满地飞蚁](https://so.toutiao.com/search?keyword=湖北一高校大厅惊现满地飞蚁)
+1. [一季度中国经济增长缘何“超预期”](https://so.toutiao.com/search?keyword=一季度中国经济增长缘何“超预期”)
+1. [耶伦：美国将对伊朗实施新制裁](https://so.toutiao.com/search?keyword=耶伦：美国将对伊朗实施新制裁)
+1. [马斯克N+3赔偿员工被称“良心老板”](https://so.toutiao.com/search?keyword=马斯克N+3赔偿员工被称“良心老板”)
+1. [官方回应老人遭雷击身亡](https://so.toutiao.com/search?keyword=官方回应老人遭雷击身亡)
+1. [美媒：以色列准备多款战机打击伊朗](https://so.toutiao.com/search?keyword=美媒：以色列准备多款战机打击伊朗)
+1. [外媒评德总理朔尔茨访华](https://so.toutiao.com/search?keyword=外媒评德总理朔尔茨访华)
+1. [发改委谈超长期国债的部署支持领域](https://so.toutiao.com/search?keyword=发改委谈超长期国债的部署支持领域)
+1. [川渝燃气公司利润大涨股价连跌](https://so.toutiao.com/search?keyword=川渝燃气公司利润大涨股价连跌)
+1. [王楚钦：昨天是最难熬的一天](https://so.toutiao.com/search?keyword=王楚钦：昨天是最难熬的一天)
 1. [招牌统一的城市营商环境不好？](https://so.toutiao.com/search?keyword=招牌统一的城市营商环境不好？)
 1. [女子躺座椅上拒不下飞机致航班延误](https://so.toutiao.com/search?keyword=女子躺座椅上拒不下飞机致航班延误)
-1. [华为Pura70系列出货量或增长约230%](https://so.toutiao.com/search?keyword=华为Pura70系列出货量或增长约230%)
-1. [媒体人：鹈鹕主帅做了勇敢的决定](https://so.toutiao.com/search?keyword=媒体人：鹈鹕主帅做了勇敢的决定)
 1. [主播回应撞脸命案逃犯：已报警](https://so.toutiao.com/search?keyword=主播回应撞脸命案逃犯：已报警)
-1. [刘强东数字人直播释放什么信号](https://so.toutiao.com/search?keyword=刘强东数字人直播释放什么信号)
-1. [农民工白天打工晚上去直播间当大哥](https://so.toutiao.com/search?keyword=农民工白天打工晚上去直播间当大哥)
 1. [尹锡悦致歉13分钟说了15个“但是”](https://so.toutiao.com/search?keyword=尹锡悦致歉13分钟说了15个“但是”)
-1. [中美防长通话 双方新闻稿有何差异](https://so.toutiao.com/search?keyword=中美防长通话+双方新闻稿有何差异)
 1. [若美军多枚反舰导弹齐射 如何防御](https://so.toutiao.com/search?keyword=若美军多枚反舰导弹齐射+如何防御)
 1. [中国两批援助加沙物资将运抵埃及](https://so.toutiao.com/search?keyword=中国两批援助加沙物资将运抵埃及)
-1. [俄军T72坦克炮击乌军阵地视频曝光](https://so.toutiao.com/search?keyword=俄军T72坦克炮击乌军阵地视频曝光)
 1. [美反潜巡逻机过航台海 东部战区回应](https://so.toutiao.com/search?keyword=美反潜巡逻机过航台海+东部战区回应)
-1. [女子怀孕36周每次起床都“变形”](https://so.toutiao.com/search?keyword=女子怀孕36周每次起床都“变形”)
 1. [阿曼连续3天遭遇强降雨已致19死](https://so.toutiao.com/search?keyword=阿曼连续3天遭遇强降雨已致19死)
 1. [知名茶企老板一家三口遇害](https://so.toutiao.com/search?keyword=知名茶企老板一家三口遇害)
 1. [兵马俑坑挖2小时挣6000？官方辟谣](https://so.toutiao.com/search?keyword=兵马俑坑挖2小时挣6000？官方辟谣)
@@ -61,7 +77,6 @@
 1. [湖人季中赛时只有12%概率进季后赛](https://so.toutiao.com/search?keyword=湖人季中赛时只有12%概率进季后赛)
 1. [俄称乌在俄的恐怖破坏活动愈发活跃](https://so.toutiao.com/search?keyword=俄称乌在俄的恐怖破坏活动愈发活跃)
 1. [我国不包括调休的公共假期是11天](https://so.toutiao.com/search?keyword=我国不包括调休的公共假期是11天)
-1. [江西暴雨淹没路面 司机下车捞鱼](https://so.toutiao.com/search?keyword=江西暴雨淹没路面+司机下车捞鱼)
 1. [直击消防员扑救山火现场](https://so.toutiao.com/search?keyword=直击消防员扑救山火现场)
 1. [三只羊网络入局短剧赛道](https://so.toutiao.com/search?keyword=三只羊网络入局短剧赛道)
 1. [美欧称乌克兰与以色列“不能比”](https://so.toutiao.com/search?keyword=美欧称乌克兰与以色列“不能比”)
@@ -93,7 +108,6 @@
 1. [两天内两名中管干部被查](https://so.toutiao.com/search?keyword=两天内两名中管干部被查)
 1. [刘强东的AI数字分身是如何练成的](https://so.toutiao.com/search?keyword=刘强东的AI数字分身是如何练成的)
 1. [澳门世界杯排名前十选手邱党出局](https://so.toutiao.com/search?keyword=澳门世界杯排名前十选手邱党出局)
-1. [于东来称员工最低收入到手近8000元](https://so.toutiao.com/search?keyword=于东来称员工最低收入到手近8000元)
 1. [媒体：拼凑出长假的调休制度该变了](https://so.toutiao.com/search?keyword=媒体：拼凑出长假的调休制度该变了)
 1. [薪资专家分析勇士休赛期要处理问题](https://so.toutiao.com/search?keyword=薪资专家分析勇士休赛期要处理问题)
 1. [全红婵陈芋汐十米台再现神同步](https://so.toutiao.com/search?keyword=全红婵陈芋汐十米台再现神同步)
